--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "watch": "ionic-app-scripts watch",
+    "build": "ionic-app-scripts build --dev",
+    "build:prod": "ionic-app-scripts build --prod",
+    "serve": "ionic-app-scripts serve --lab",
+    "serve:nolab": "ionic-app-scripts serve",
+    "emulate": "ionic emulate ios --livereload --target \"iPhone-6-Plus, 10.2\"",
+    "emulate:android": "ionic emulate android --livereload",
+    "run": "npm run build && ionic run ios",
+    "run:android": "npm run build && ionic run android",
+    "resources": "ionic resources"
   },
   "dependencies": {
     "@angular/common": "2.4.8",
