--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@ionic-native/barcode-scanner": "^3.2.4",
+    "@ionic-native/core": "^3.2.4",
+    "@ionic-native/splash-screen": "^3.2.4",
+    "@ionic-native/status-bar": "^3.2.4",
     "@ionic/storage": "2.0.0",
     "ionic-angular": "2.3.0",
-    "ionic-native": "2.8.1",
     "ionicons": "3.0.0",
     "jsbarcode": "^3.5.8",
     "rxjs": "5.0.1",
