--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "build:prod": "ionic-app-scripts build --prod",
     "serve": "ionic-app-scripts serve --lab",
     "serve:nolab": "ionic-app-scripts serve",
-    "emulate": "ionic emulate ios --target \"iPhone-6-Plus, 10.2\"",
-    "emulate:noreload": "ionic emulate ios --livereload --target \"iPhone-6-Plus, 10.2\"",
+    "emulate": "ionic emulate ios --livereload --target \"iPhone-6-Plus, 10.2\"",
+    "emulate:noreload": "ionic emulate ios --target \"iPhone-6-Plus, 10.2\"",
     "emulate:android": "ionic emulate android --livereload",
     "run": "npm run build && ionic run ios",
     "run:android": "npm run build && ionic run android",
     "resources": "ionic resources",
     "ionic:release:build": "npm run build:prod && ionic build android --release",
-    "install:apk": "adb install apps/ion2Seed.apk",
+    "install:apk": "adb install apps/tinywallet.apk",
     "prepublish:apk": "rimraf apps/*.apk && rimraf apps/*.ipa",
     "publish:apk": "fastlane android release",
     "uitests:init": "cd ui_tests && npm install && npm run restore && npm run build",
