--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@ionic-native/core": "^3.2.4",
     "@ionic-native/splash-screen": "^3.2.4",
     "@ionic-native/status-bar": "^3.2.4",
-    "@ionic/storage": "2.0.0",
+    "@ionic/storage": "^2.0.0",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
     "jsbarcode": "^3.5.8",
