Including the Fastfile config

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "resources": "ionic resources",
     "ionic:release:build": "npm run build:prod && ionic build android --release",
     "install:apk": "adb install apps/tinywallet.apk",
-    "prepublish:apk": "rimraf apps/*.apk && rimraf apps/*.ipa",
-    "publish:apk": "fastlane android release",
+    "prepublish:android": "rimraf apps/*.apk rimraf apps/*.ipa",
+    "publish:android": "fastlane android release",
+    "prepublish:ios": "rimraf apps/*.ipa",
+    "publish:ios": "fastlane ios release",
     "uitests:init": "cd ui_tests && npm install && npm run restore && npm run build",
     "uitest:build": "cd ui_tests && npm run build",
     "uitest:run:ios": "cd ui_tests && npm run test:ios",
