--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
+    "increment": "node scripts/increment.js",
     "watch": "ionic-app-scripts watch",
     "build": "ionic-app-scripts build --dev",
     "build:prod": "ionic-app-scripts build --prod",
@@ -47,6 +48,7 @@
     "@ionic-native/splash-screen": "^3.2.4",
     "@ionic-native/status-bar": "^3.2.4",
     "@ionic/storage": "^2.0.0",
+    "cordova-auto-patch": "^1.2.2",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
     "jsbarcode": "^3.5.8",
