--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "increment": "node scripts/increment.js",
     "watch": "ionic-app-scripts watch",
     "build": "ionic-app-scripts build --dev",
+    "prebuild:prod": "npm run increment",
     "build:prod": "ionic-app-scripts build --prod",
     "serve": "ionic-app-scripts serve --lab",
     "serve:nolab": "ionic-app-scripts serve",
