--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@ionic-native/splash-screen": "^3.2.4",
     "@ionic-native/status-bar": "^3.2.4",
     "@ionic/storage": "^2.0.0",
+    "angular2-uuid": "^1.1.1",
     "cordova-auto-patch": "^1.2.2",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
