--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
+  "name": "tiny-wallet",
+  "author": "Paul Patarinski",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -49,6 +49,7 @@
     "@ionic-native/splash-screen": "^3.2.4",
     "@ionic-native/status-bar": "^3.2.4",
     "@ionic/storage": "^2.0.0",
+    "angular2-elastic": "^0.13.0",
     "angular2-uuid": "^1.1.1",
     "cordova-auto-patch": "^1.2.2",
     "ionic-angular": "2.3.0",
