--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "emulate:android": "ionic emulate android --livereload",
     "run": "npm run build && ionic run ios",
     "run:android": "npm run build && ionic run android",
-    "resources": "ionic resources",
+    "resources": "ionic cordova resources",
     "ionic:release:build": "npm run build:prod && ionic build android --release",
     "install:apk": "adb install apps/tinywallet.apk",
     "prepublish:android": "rimraf apps/*.apk rimraf apps/*.ipa",
@@ -60,9 +60,10 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.6",
-    "typescript": "~2.2.1",
-    "@ionic/cli-plugin-cordova": "0.0.9",
-    "@ionic/cli-build-ionic-angular": "0.0.3"
+    "@ionic/cli-build-ionic-angular": "0.0.3",
+    "@ionic/cli-plugin-cordova": "^1.0.0-rc.1",
+    "@ionic/cli-plugin-ionic-angular": "^1.0.0-rc.1",
+    "typescript": "~2.2.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
