Updating the scripts to the new ionic cli

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "serve": "ionic-app-scripts serve --lab",
     "serve:nolab": "ionic-app-scripts serve",
     "emulate": "ionic emulate ios --livereload --target \"iPhone-6\"",
-    "emulate:noreload": "ionic emulate ios --target \"iPhone-6-Plus, 10.2\"",
-    "emulate:android": "ionic emulate android --livereload",
+    "emulate:noreload": "ionic cordova emulate ios --target \"iPhone-6-Plus, 10.2\"",
+    "emulate:android": "ionic cordova emulate android --livereload",
     "run": "ionic cordova run ios",
-    "run:android": "npm run build && ionic run android",
+    "run:android": "npm run build && ionic cordova run android",
     "resources": "ionic cordova resources",
-    "ionic:release:build": "npm run build:prod && ionic build android --release",
+    "ionic:release:build": "npm run build:prod && ionic cordova build ios --release",
+    "ionic:release:build:android": "npm run build:prod && ionic cordova build android --release",
     "install:apk": "adb install apps/tinywallet.apk",
     "prepublish:android": "rimraf apps/*.apk rimraf apps/*.ipa",
     "publish:android": "fastlane android release",
