--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "run": "ionic cordova run ios",
     "run:android": "npm run build && ionic cordova run android",
     "resources": "ionic cordova resources",
-    "ionic:release:build": "ionic cordova build ios --release --prod",
-    "ionic:release:build:android": "npm run build:prod && ionic cordova build android --release",
+    "ionic:release:build": "npm run increment && ionic cordova build ios --release --prod",
+    "ionic:release:build:android": "npm run increment && ionic cordova build android --release --prod",
     "install:apk": "adb install apps/tinywallet.apk",
     "prepublish:android": "rimraf apps/*.apk rimraf apps/*.ipa",
     "publish:android": "fastlane android release",
