--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "jsbarcode": "^3.5.8",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "resp-sass": "0.0.9"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.6",
